# publication-manager

./: .gitignore  README.md  docker-compose.yml  input.xlsx
.devcontainer/: devcontainer.json  docker-compose.yml
ai/: .env  Dockerfile  README.md  app.py  async_test.py  celery_app.py  mistral.py  mistralapi.py  pyproject.toml  text_io.py
background_task/: pyproject.toml  scraper.py
client/: .env  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: AIModel.tsx  Button.tsx  PreviewTable.tsx  Search.tsx  Slider.tsx  Table.tsx
client/src/config/: config.ts
client/src/contexts/: FileContext.ts
client/src/hooks/: useDebounced.ts  useFetch.ts  useMutation.ts  usePolling.ts  useStream.ts
client/src/icons/: ArrowDownTray.tsx  ArrowPath.tsx  ArrowRight.tsx  ArrowUpTray.tsx  Filter.tsx  Home.tsx  LoadingSpinner.tsx
client/src/modals/: FilterByRecordModal.tsx  UploadDocumentModal.tsx
client/src/pages/: ErrorPage.tsx  FrontPage.tsx  LoadingPage.tsx  ResultPage.tsx
client/src/utils/: exportExcel.ts  isPending.ts
server/: .env  Dockerfile  README.md  app.py  celery_app.py  models.py  pyproject.toml
server/background_task/: main.py  pyproject.toml  scraper.py  scraper_scholarly.py
server/temp/files/: input.xlsx  output.xlsx
tasks/: .env  Dockerfile  celery_app.py  data.json  main.py  pyproject.toml  scraper.py
