[tool.poetry]
name = "dblptest"
version = "0.1.0"
description = ""
authors = ["Sairam Mangeshkar"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
scholarly = "^1.7.11"
aiohttp = "^3.10.5"
celery = "^5.4.0"
redis = "^5.0.8"
requests = "^2.32.3"
supabase = {git = "https://github.com/supabase/supabase-py"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
